  This was already the case under Windows, but this is now also done under
  Unix. Note that previously the program was interpreted relative to the current
  directory.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

- #9650, #9651: keep refactoring the pattern-matching compiler
  (Gabriel Scherer, review by Thomas Refis and Florian Angeletti)

- #9994: Make Types.type_expr a private type, and abstract marking mechanism
  (Jacques Garrigue and Takafumi Saikawa,
   review by Gabriel Scherer and Leo White)

- #10007: Driver.compile_common: when typing a .ml file, return the
  compilation unit signature (inferred or from the .cmi) in addition
  to the implementation and the coercion.
  (Leandro Ostera, review by Gabriel Scherer and Thomas Refis)

* #10061, #10078: remove library `ocamlopttoplevel`, remove modules
  `Opttoploop`, `Opttopstart`, which are replaced by `Toploop` and `Topstart` in
  library `ocamltoplevel`, made available in native code.

* #10086: add the commands `make list-parse-errors` and `make
  generate-parse-errors` to generate a set of syntactically incorrect
  sentences that covers all error states of the LR automaton. Add these
  sentences to the test suite. This can be used to evaluate the quality of the
  parser's syntax error messages and (in the future) to evaluate the impact of
  changes in the parser.
  (François Pottier, review by Gabriel Scherer and Xavier Leroy.)

### Build system:

- #9191, #10091: take the LDFLAGS variable into account, except on
  flexlink-using systems.
  (Gabriel Scherer, review by Sébastien Hinderer and David Allsopp,
   report by Ralph Seichter)

### Bug fixes:

- #10005: Try expanding aliases in Ctype.nondep_type_rec
  (Stephen Dolan, review by Gabriel Scherer, Leo White and Xavier Leroy)

- #10071: Fix bug in tests/misc/weaklifetime.ml that was reported in #10055