@@ -8,9 +8,9 @@
          [0: [0]]))
     (seq (ignore (let (x = [0: 4 2]) (makeblock 0 x)))
       (apply (field 1 (global CamlinternalMod!)) [0: [0]] A
-        (module-defn(A) Anonymous anonymous.ml(23):567-608 A))
+        (module-defn(A) Anonymous anonymous.ml(23):0-(25):7 A))
       (apply (field 1 (global CamlinternalMod!)) [0: [0]] B
-        (module-defn(B) Anonymous anonymous.ml(33):703-773
+        (module-defn(B) Anonymous anonymous.ml(33):0-(39):3
           (let (x = [0: "foo" "bar"]) (makeblock 0))))
       (let (f = (function param 0) s = (makemutable 0 ""))
         (seq
