@@ -1,10 +1,10 @@
 (setglobal Module_coercion!
   (let
     (M =
-       (module-defn(M) Module_coercion module_coercion.ml(15):436-1135
+       (module-defn(M) Module_coercion module_coercion.ml(15):0-(28):3
          (makeblock 0)))
     (makeblock 0 M
-      (module-defn(M_int) Module_coercion module_coercion.ml(46):1552-1591
+      (module-defn(M_int) Module_coercion module_coercion.ml(46):0-39
         (makeblock 0 (function prim stub (array.length[int] prim))
           (function prim prim stub (array.get[int] prim prim))
           (function prim prim stub (array.unsafe_get[int] prim prim))
@@ -18,7 +18,7 @@
           (function prim prim stub (> prim prim))
           (function prim prim stub (<= prim prim))
           (function prim prim stub (>= prim prim))))
-      (module-defn(M_float) Module_coercion module_coercion.ml(47):1594-1637
+      (module-defn(M_float) Module_coercion module_coercion.ml(47):0-43
         (makeblock 0 (function prim stub (array.length[float] prim))
           (function prim prim stub (array.get[float] prim prim))
           (function prim prim stub (array.unsafe_get[float] prim prim))
@@ -32,7 +32,7 @@
           (function prim prim stub (>. prim prim))
           (function prim prim stub (<=. prim prim))
           (function prim prim stub (>=. prim prim))))
-      (module-defn(M_string) Module_coercion module_coercion.ml(48):1640-1685
+      (module-defn(M_string) Module_coercion module_coercion.ml(48):0-45
         (makeblock 0 (function prim stub (array.length[addr] prim))
           (function prim prim stub (array.get[addr] prim prim))
           (function prim prim stub (array.unsafe_get[addr] prim prim))
@@ -46,7 +46,7 @@
           (function prim prim stub (caml_string_greaterthan prim prim))
           (function prim prim stub (caml_string_lessequal prim prim))
           (function prim prim stub (caml_string_greaterequal prim prim))))
-      (module-defn(M_int32) Module_coercion module_coercion.ml(49):1688-1731
+      (module-defn(M_int32) Module_coercion module_coercion.ml(49):0-43
         (makeblock 0 (function prim stub (array.length[addr] prim))
           (function prim prim stub (array.get[addr] prim prim))
           (function prim prim stub (array.unsafe_get[addr] prim prim))
@@ -60,7 +60,7 @@
           (function prim prim stub (Int32.> prim prim))
           (function prim prim stub (Int32.<= prim prim))
           (function prim prim stub (Int32.>= prim prim))))
-      (module-defn(M_int64) Module_coercion module_coercion.ml(50):1734-1777
+      (module-defn(M_int64) Module_coercion module_coercion.ml(50):0-43
         (makeblock 0 (function prim stub (array.length[addr] prim))
           (function prim prim stub (array.get[addr] prim prim))
           (function prim prim stub (array.unsafe_get[addr] prim prim))
@@ -74,7 +74,7 @@
           (function prim prim stub (Int64.> prim prim))
           (function prim prim stub (Int64.<= prim prim))
           (function prim prim stub (Int64.>= prim prim))))
-      (module-defn(M_nativeint) Module_coercion module_coercion.ml(51):1780-1831
+      (module-defn(M_nativeint) Module_coercion module_coercion.ml(51):0-51
         (makeblock 0 (function prim stub (array.length[addr] prim))
           (function prim prim stub (array.get[addr] prim prim))
           (function prim prim stub (array.unsafe_get[addr] prim prim))
