@@ -43,6 +43,10 @@ Working version
 
 ### Compiler user-interface and warnings:
 
+- #101??: Use line-relative locations in -dlambda (allows tests tun run with
+  CRLF-formatted source files).
+  (David Allsopp, review by ???)
+
 ### Internal/compiler-libs changes:
 
 - #9650, #9651: keep refactoring the pattern-matching compiler
